@@ -15,6 +15,8 @@ class RemoteAdyenTest < Test::Unit::TestCase
       :brand => 'visa'
     )
 
+    @three_ds_enrolled_card = credit_card('4212345678901237', brand: :visa)
+
     @declined_card = credit_card('4000300011112220')
 
     @improperly_branded_maestro = credit_card(
@@ -58,6 +60,16 @@ class RemoteAdyenTest < Test::Unit::TestCase
     response = @gateway.authorize(@amount, @credit_card, @options)
     assert_success response
     assert_equal 'Authorised', response.message
+  end
+
+  def test_successful_authorize_with_3ds
+    assert response = @gateway.authorize(@amount, @three_ds_enrolled_card, @options.merge(execute_threed: true))
+    assert response.test?
+    refute response.authorization.blank?
+    assert_equal response.params['resultCode'], 'RedirectShopper'
+    refute response.params['issuerUrl'].blank?
+    refute response.params['md'].blank?
+    refute response.params['paRequest'].blank?
   end
 
   def test_failed_authorize
