@@ -11,6 +11,7 @@
 * USA ePay: add support for recurring transactions, custom fields, and line items [lancecarlson] #3069
 * Add dLocal gateway [curiousepic] #3709
 * dLocal: Require secret_key [curiousepic] #3080
+* Adyen: Implement 3DS [nfarve] #3076
 
 == Version 1.88.0 (November 30, 2018)
 * Added ActiveSupport/Rails master support [Edouard-chin] #3065
